# Aegis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aegis/: __init__.py  config.py  main.py
aegis/forge/: __init__.py  judge.py  optimizer.py  red_hat.py  runner.py
aegis/lens/: __init__.py  code_flattener.py  ocr_scanner.py  pipeline.py  unicode_normalizer.py
aegis/oracle/: __init__.py  briefer.py  scanner.py  scheduler.py  templates.py
aegis/proxy/: __init__.py  middleware.py  models.py  routes.py  server.py
aegis/shield/: __init__.py  pipeline.py
aegis/shield/canary/: __init__.py  detector.py  generator.py  injector.py
aegis/shield/guardrail/: __init__.py  backends.py  (+3 more)
aegis/utils/: __init__.py  crypto.py  logging.py  text.py
playground/: attacks.json  dashboard.html  run_e2e.py  start_server.py  test_guardrail_scores.py
tests/: conftest.py
tests/test_forge/: __init__.py  test_forge.py
tests/test_lens/: __init__.py  test_code_flattener.py  test_ocr_scanner.py  test_pipeline.py  test_unicode_normalizer.py
tests/test_oracle/: __init__.py  test_oracle.py
tests/test_proxy/: __init__.py  test_middleware.py  test_models.py  test_routes.py
tests/test_shield/: __init__.py  test_canary_detector.py  test_canary_generator.py  test_canary_injector.py  test_guardrail.py  test_pii_detector.py  test_pii_generators.py  test_pii_swapper.py  test_pii_vault.py  test_pipeline.py  test_structural_tagger.py
tests/test_utils/: __init__.py  test_crypto.py  test_logging.py  test_text.py
(+7 files in other folders)
